--- a/lang/en.json
+++ b/lang/en.json
@@ -172,110 +172,39 @@
   "email_label": "Email",
   "monday_to_friday": "Monday to Friday",
   "saturday_label": "Saturday",
-  
-  
-  
-  
-  
-  
-  
-  "services_dropdown_menu": [
-    {
-      "label": "All price categories",
-      "value": ""
-    },
-    {
-      "label": "0 Ft - 20,000 Ft",
-      "value": [0, 20000]
-    },
-    {
-      "label": "20,001 Ft - 40,000 Ft",
-      "value": [20001, 40000]
-    },
-    {
-      "label": "Over 40,000 Ft",
-      "value": [40001, 1000000000]
-    }
-  ],
+  "exterior_wash": "exterior wash",
+  "description1": "refresh your car's exterior with premium cleaning products that will turn heads wherever you go!",
+  "interior_clean": "interior cleaning",
+  "description2": "bring back the freshness and cleanliness to your car's interior as if you were driving a new car!",
+  "extra_polishing": "extra polishing",
+  "description3": "make your car's shine irresistible with a special polish that preserves the gloss for a long time.",
+  "upholstery_cleaning": "upholstery cleaning",
+  "description4": "say goodbye to stubborn stains! our deep cleaning service will make your upholstery fresh and clean again.",
+  "ceramic_coating": "ceramic coating",
+  "description5": "protect your car from scratches and dirt with our long-lasting ceramic coating, which provides a brilliant shine.",
+  "engine_wash": "engine wash",
+  "description6": "engine cleanliness is not just about aesthetics – increase its lifespan with our professional engine wash.",
+  "quick_wash": "quick wash",
+  "description7": "give your car a quick refresh – clean results in less time without compromising quality!",
+  "wax_coating": "wax coating",
+  "description8": "give your car radiant protection and water-repellent effects with our premium wax.",
+  "rim_cleaning": "rim cleaning",
+  "description9": "restore the original shine of your rims! effective cleaning against stubborn dirt.",
+  "full_cleaning": "full interior and exterior cleaning",
+  "description10": "make your car spotless inside and out with a comprehensive cleaning that will make you love driving again!",
+  "windshield_polishing": "windshield polishing",
+  "description11": "say goodbye to scratches and annoying spots – crystal-clear visibility with just one polish!",
+  "sticker_removal": "sticker removal",
+  "description12": "we remove stickers without damage, preserving your car's paintwork.",
   "login_do_account": "don't have an account yet? click the registration button below!",
   "passw_show":"show password",
   "personal_data":"personal data",
   "appointment_booking":"appointment booking",
   "my_bookings": "my bookings",
   "postcode_alert":"please provide a valid postal code!",
-
-    "services_card": [
-      {
-        "services_name": "exterior_wash",
-        "translated_name": "Exterior Wash",
-        "description": "Transform the exterior of your car with premium cleaning products, making sure all eyes are on you!",
-        "price": 11990
-      },
-      {
-        "services_name": "interior_clean",
-        "translated_name": "Interior Cleaning",
-        "description": "Bring back the freshness and cleanliness inside your vehicle as if you just bought a new car!",
-        "price": 11990
-      },
-      {
-        "services_name": "extra_polishing",
-        "translated_name": "Extra Polishing",
-        "description": "Make your car’s shine irresistible with a special polishing treatment that preserves its brilliance.",
-        "price": 14990
-      },
-      {
-        "services_name": "upholstery_cleaning",
-        "translated_name": "Upholstery Cleaning",
-        "description": "Say goodbye to stubborn stains! Our deep cleaning will restore your upholstery to its fresh and clean state.",
-        "price": 14990
-      },
-      {
-        "services_name": "ceramic_coating",
-        "translated_name": "Ceramic Coating",
-        "description": "Protect your car from scratches and dirt with long-lasting ceramic coating for a glossy finish.",
-        "price": 49990
-      },
-      {
-        "services_name": "engine_wash",
-        "translated_name": "Engine Wash",
-        "description": "A clean engine bay is more than just aesthetics – extend its lifespan with our professional engine wash.",
-        "price": 19990
-      },
-      {
-        "services_name": "quick_wash",
-        "translated_name": "Quick Wash",
-        "description": "Refresh your car in no time – clean results delivered fast, without any compromises!",
-        "price": 11990
-      },
-      {
-        "services_name": "wax_coating",
-        "translated_name": "Wax Coating",
-        "description": "Give your car dazzling protection and water-repellent properties with our premium wax coating.",
-        "price": 24990
-      },
-      {
-        "services_name": "rim_cleaning",
-        "translated_name": "Rim Cleaning",
-        "description": "Restore your rims to their original shine! Effective cleaning to combat tough dirt and grime.",
-        "price": 19990
-      },
-      {
-        "services_name": "full_cleaning",
-        "translated_name": "Full Exterior and Interior Cleaning",
-        "description": "Make your car spotless inside and out with a comprehensive cleaning that will make you love driving again!",
-        "price": 64990
-      },
-      {
-        "services_name": "windshield_polishing",
-        "translated_name": "Windshield Polishing",
-        "description": "Say goodbye to scratches and annoying marks – enjoy crystal-clear visibility with a single polish treatment!",
-        "price": 22990
-      },
-      {
-        "services_name": "sticker_removal",
-        "translated_name": "Sticker Removal",
-        "description": "We remove stickers painlessly without damaging your car’s paintwork.",
-        "price": 9990
-      }
-    ]
+  "package_name":"package name",
+  "operation":"operation",
+  "no_bookings":"no bookings",
+  "vehicle_registration_number":"vehicle registration number",
+  "date":"date"
 }
