--- a/lang/en.json
+++ b/lang/en.json
@@ -207,5 +207,8 @@
   "no_bookings":"no bookings",
   "vehicle_registration_number":"vehicle registration number",
   "date":"date",
-  "appointment_button_selected": "Package selected"
+  "appointment_button_selected": "Package selected",
+  "make_an_appointment":"appointment booking",
+  "welcome_message_booking":"Welcome to the Super Car Wash appointment booking system!",
+  "booking_instructions":"please choose your desired washing packages on the 'Services' page, then fill in the remaining details and save your booking. your booking will be added to your personal profile."
 }
