felesleges php-k törlése és css rendberakása

--- a/lang/de.json
+++ b/lang/de.json
@@ -168,6 +168,7 @@
   "map": "Karte",
   "home": "Startseite",
   "address_label": "Adresse",
+  "address_footer": "Makó, Habfürdő Straße 6.",
   "phone_label": "Telefon",
   "email_label": "E-Mail",
   "monday_to_friday": "Montag bis Freitag",
