--- a/lang/en.json
+++ b/lang/en.json
@@ -168,6 +168,7 @@
   "map": "Map",
   "home": "Home",
   "address_label": "Address",
+  "address_footer": "Makó, Habfürdő street 6.",
   "phone_label": "Phone",
   "email_label": "Email",
   "monday_to_friday": "Monday to Friday",
