--- a/lang/hu.json
+++ b/lang/hu.json
@@ -169,6 +169,7 @@
   "map": "térkép",
   "home": "kezdőlap",
   "address_label": "cím",
+  "address_footer": "Makó, Habfürdő utca 6.",
   "phone_label": "telefon",
   "email_label": "Email",
   "monday_to_friday": "hétfő - Péntek",
