--- a/lang/en.json
+++ b/lang/en.json
@@ -212,5 +212,7 @@
   "appointment_button_selected": "Package selected",
   "make_an_appointment":"appointment booking",
   "welcome_message_booking":"Welcome to the Super Car Wash appointment booking system!",
-  "booking_instructions":"please choose your desired washing packages on the 'Services' page, then fill in the remaining details and save your booking. your booking will be added to your personal profile."
+  "booking_instructions":"please choose your desired washing packages on the 'Services' page, then fill in the remaining details and save your booking. your booking will be added to your personal profile.",
+  "please_select_service": "please select a package from our services page!",
+  "time":"time"
 }
