--- a/lang/hu.json
+++ b/lang/hu.json
@@ -213,5 +213,7 @@
   "appointment_button_selected": "csomag kiválasztva",
   "make_an_appointment":"időpontfoglalás",
   "welcome_message_booking":"Üdvözöljük a Super Car Wash időpontfoglaló rendszerében!",
-  "booking_instructions":"kérjük, válassza ki a kívánt mosási csomagokat a 'Szolgáltatások' oldalon, majd töltse ki a többi adatot, és mentse el a foglalását. foglalása bekerül az Ön személyes profiljába."
+  "booking_instructions":"kérjük, válassza ki a kívánt mosási csomagokat a 'Szolgáltatások' oldalon, majd töltse ki a többi adatot, és mentse el a foglalását. foglalása bekerül az Ön személyes profiljába.",
+  "please_select_service": "kérem válasszon csomagjaink közül a szolgáltatások oldalon!",
+  "time":"idő"
 }
