Véleményírás bejelentkezve kész

--- a/lang/hu.json
+++ b/lang/hu.json
@@ -141,7 +141,7 @@
   "about_us_3p": "az évek során ügyfeleink bizalmának és elégedettségének köszönhetően mára egy jól ismert, megbízható vállalkozássá váltunk.",
   "about_us_4p": "válaszd a Super Car Wash-t, ahol a családi értékek, a minőség és a megbízhatóság találkozik! 🚗✨",
   "opinion_title": "ossza meg velünk véleményét!",
-  "rating": "értékelés",
+  "rating": "Értékelés",
   "opinion": "vélemény",
   "opinion_send": "vélemény elküldése",
   "my_appointments": "időpontjaim",
@@ -152,10 +152,10 @@
   "price_category": "árkategória",
   "search_alert": "nincs megjeleníthető szolgáltatás a szűrők alapján.",
   "appointment_button": "időpontot foglalok!",
-  "home_p1": "Üdvözlünk a super car wash világában, ahol az autója mindig kiemelt figyelmet és professzionális törődést kap! nálunk nemcsak egy egyszerű autómosás vár, hanem prémium szolgáltatások, amelyek garantálják, hogy járműve ragyogjon, akár egy új autó. foglaljon időpontot gyorsan és könnyedén, válasszon a különböző mosási csomagjaink közül, és tapasztalja meg, mit jelent az igazi autós luxus!",
+  "home_p1": "Üdvözlünk a Super Car Wash világában, ahol az autója mindig kiemelt figyelmet és professzionális törődést kap! nálunk nemcsak egy egyszerű autómosás vár, hanem prémium szolgáltatások, amelyek garantálják, hogy járműve ragyogjon, akár egy új autó. foglaljon időpontot gyorsan és könnyedén, válasszon a különböző mosási csomagjaink közül, és tapasztalja meg, mit jelent az igazi autós luxus!",
   "home_appointment_btn": "foglaljon időpontot most!",
   "loyalty_title": "díjazzuk a hűségét!",
-  "vip_text":"legyen ön is a super car wash vip klub tagja! hűséges ügyfeleinket különleges kedvezményekkel és exkluzív ajánlatokkal jutalmazzuk, hogy még élvezetesebbé tegyük a prémium autóápolást. ha rendszeresen nálunk mosatja autóját, vip ügyfelünkként egyedi szolgáltatásokhoz és ajándékokhoz is hozzáférhet. értékeljük a bizalmát, és szeretnénk visszaadni belőle!",
+  "vip_text":"legyen ön is a Super Car Wash VIP klub tagja! hűséges ügyfeleinket különleges kedvezményekkel és exkluzív ajánlatokkal jutalmazzuk, hogy még élvezetesebbé tegyük a prémium autóápolást. ha rendszeresen nálunk mosatja autóját, VIP ügyfelünkként egyedi szolgáltatásokhoz és ajándékokhoz is hozzáférhet. értékeljük a bizalmát, és szeretnénk visszaadni belőle!",
   "card1_title": "professzionális",
   "card1_text": "szakképzett kollégáink több éves autókozmetikai tapasztalattal foglalkoznak autójával.",
   "card2_title": "környezetbarát",
