--- a/lang/en.json
+++ b/lang/en.json
@@ -214,5 +214,9 @@
   "welcome_message_booking":"Welcome to the Super Car Wash appointment booking system!",
   "booking_instructions":"please choose your desired washing packages on the 'Services' page, then fill in the remaining details and save your booking. your booking will be added to your personal profile.",
   "please_select_service": "please select a package from our services page!",
-  "time":"time"
+  "time":"time",
+  "email_notmacht":"the email addresses do not match!",
+  "password_conditional":"the password must be at least 5 characters long, and must contain lowercase and uppercase letters, as well as a number.",
+  "password_notmacht":"the given passwords do not match!",
+  "back_to_login":"back to login"
 }
