--- a/lang/hu.json
+++ b/lang/hu.json
@@ -136,10 +136,10 @@
   "about_us": "rólunk",
   "page_title": "Super Car Wash",
   "who_are_we": "kik vagyunk...?",
-  "about_us_1p": "ismerd meg a Super Car Wash történetét! a Super Car Wash több mint 10 éve kezdte meg működését egy kis családi vállalkozásként.",
+  "about_us_1p": "ismerje meg a Super Car Wash történetét! a Super Car Wash több mint 10 éve kezdte meg működését egy kis családi vállalkozásként.",
   "about_us_2p": "szenvedélyünk az autók iránt és az igényes tisztítás iránti elkötelezettségünk segített minket abban, hogy folyamatosan fejlődjünk és bővítsük szolgáltatásainkat.",
   "about_us_3p": "az évek során ügyfeleink bizalmának és elégedettségének köszönhetően mára egy jól ismert, megbízható vállalkozássá váltunk.",
-  "about_us_4p": "válaszd a Super Car Wash-t, ahol a családi értékek, a minőség és a megbízhatóság találkozik! 🚗✨",
+  "about_us_4p": "válassza a Super Car Wash-t, ahol a családi értékek, a minőség és a megbízhatóság találkozik! 🚗✨",
   "opinion_title": "ossza meg velünk véleményét!",
   "rating": "Értékelés",
   "opinion": "vélemény",
@@ -147,15 +147,15 @@
   "my_appointments": "időpontjaim",
   "services_video_alert": "a böngésződ nem támogatja ezt a videólejátszót.",
   "our_services":"szolgáltatásaink",
-  "services_p1":"fedezd fel prémium szolgáltatásainkat! autómosónk a legmagasabb színvonalat képviseli, legyen szó külső-belső takarításról, polírozásról, felni tisztításról, viaszolásról vagy kerámia bevonatról. környezetbarát tisztítószereinkkel óvjuk a természetet, miközben autód ragyogó tisztaságot kap.",
+  "services_p1":"fedezze fel prémium szolgáltatásainkat! autómosónk a legmagasabb színvonalat képviseli, legyen szó külső-belső takarításról, polírozásról, felni tisztításról, viaszolásról vagy kerámia bevonatról. környezetbarát tisztítószereinkkel óvjuk a természetet, miközben autója ragyogó tisztaságot kap.",
   "search": "keresés",
   "price_category": "árkategória",
   "search_alert": "nincs megjeleníthető szolgáltatás a szűrők alapján.",
   "appointment_button": "időpontot foglalok!",
-  "home_p1": "Üdvözlünk a Super Car Wash világában, ahol az autója mindig kiemelt figyelmet és professzionális törődést kap! nálunk nemcsak egy egyszerű autómosás vár, hanem prémium szolgáltatások, amelyek garantálják, hogy járműve ragyogjon, akár egy új autó. foglaljon időpontot gyorsan és könnyedén, válasszon a különböző mosási csomagjaink közül, és tapasztalja meg, mit jelent az igazi autós luxus!",
+  "home_p1": "Üdvözöljük a Super Car Wash világában, ahol az autója mindig kiemelt figyelmet és professzionális törődést kap! nálunk nemcsak egy egyszerű autómosás vár, hanem prémium szolgáltatások, amelyek garantálják, hogy járműve ragyogjon, akár egy új autó. foglaljon időpontot gyorsan és könnyedén, válasszon a különböző mosási csomagjaink közül, és tapasztalja meg, mit jelent az igazi autós luxus!",
   "home_appointment_btn": "foglaljon időpontot most!",
   "loyalty_title": "díjazzuk a hűségét!",
-  "vip_text":"legyen ön is a Super Car Wash VIP klub tagja! hűséges ügyfeleinket különleges kedvezményekkel és exkluzív ajánlatokkal jutalmazzuk, hogy még élvezetesebbé tegyük a prémium autóápolást. ha rendszeresen nálunk mosatja autóját, VIP ügyfelünkként egyedi szolgáltatásokhoz és ajándékokhoz is hozzáférhet. értékeljük a bizalmát, és szeretnénk visszaadni belőle!",
+  "vip_text":"legyen Ön is a Super Car Wash VIP klub tagja! hűséges ügyfeleinket különleges kedvezményekkel és exkluzív ajánlatokkal jutalmazzuk, hogy még élvezetesebbé tegyük a prémium autóápolást. ha rendszeresen nálunk mosatja autóját, VIP ügyfelünkként egyedi szolgáltatásokhoz és ajándékokhoz is hozzáférhet. értékeljük a bizalmát, és szeretnénk visszaadni belőle!",
   "card1_title": "professzionális",
   "card1_text": "szakképzett kollégáink több éves autókozmetikai tapasztalattal foglalkoznak autójával.",
   "card2_title": "környezetbarát",
@@ -169,7 +169,6 @@
   "map": "térkép",
   "home": "kezdőlap",
   "address_label": "cím",
-  "address_footer": "Makó, Habfürdő utca 6.",
   "phone_label": "telefon",
   "email_label": "Email",
   "monday_to_friday": "hétfő - Péntek",
@@ -219,5 +218,7 @@
   "email_notmacht":"a megadott e-mail címek nem egyeznek!",
   "password_conditional":"a jelszónak legalább 5 karakter hosszúnak kell lennie, tartalmaznia kell kis- és nagybetűt, valamint számot.",
   "password_notmacht":"a megadott jelszavak nem egyeznek!",
-  "back_to_login":"vissza a bejelentkezésre"
+  "back_to_login":"vissza a bejelentkezésre",
+  "message_logout":"Biztosan kijelentkezik?",
+  "wash_address":"Makó, Habfürdő utca 6."
 }
