--- a/lang/de.json
+++ b/lang/de.json
@@ -219,8 +219,7 @@
   "password_conditional":"das passwort muss mindestens 5 zeichen lang sein und sowohl klein- als auch großbuchstaben sowie eine zahl enthalten.",
   "password_notmacht":"die angegebenen passwörter stimmen nicht überein!",
   "back_to_login":"zurück zur anmeldung",
-  "message_logout":"Sind Sie sicher, dass Sie sich abmelden möchten?"
-
-
+  "message_logout":"Sind Sie sicher, dass Sie sich abmelden möchten?",
+  "profile_updated": "Profil erfolgreich aktualisiert!"
 
 }
