--- a/lang/en.json
+++ b/lang/en.json
@@ -221,6 +221,8 @@
   "back_to_login":"back to login",
   "message_logout":"Are you sure you want to log out?",
   "wash_address": "6 Habfürdő Street, Makó",
-  "profile_updated": "Profile successfully updated!"
+  "profile_updated": "Profile successfully updated!",
+  "all_price_categories":"All price categories",
+  "above_40000":"Above 40 000 Ft"
 
 }
