Vélemény gomb fordítás debug

--- a/lang/de.json
+++ b/lang/de.json
@@ -223,5 +223,6 @@
   "profile_updated": "Profil erfolgreich aktualisiert!",
   "all_price_categories":"Alle Preiskategorien",
   "above_40000":"Über 40 000 Ft",
-  "wash_address": "Makó, Schaumbad straße 6."
+  "wash_address": "Makó, Schaumbad straße 6.",
+  "opinion_send_btn":"Bitte melden Sie sich an, um eine Bewertung abzugeben!"
 }
