--- a/lang/hu.json
+++ b/lang/hu.json
@@ -223,5 +223,6 @@
   "wash_address":"Makó, Habfürdő utca 6.",
   "profile_updated": "Profil sikeresen frissítve!",
   "all_price_categories":"Összes árkategória",
-  "above_40000":"40 000 Ft felett"
+  "above_40000":"40 000 Ft felett",
+  "opinion_send_btn":"A vélemény elküldéséhez kérjük, jelentkezzen be!"
 }
