--- a/lang/en.json
+++ b/lang/en.json
@@ -223,6 +223,7 @@
   "wash_address": "6 Habfürdő Street, Makó",
   "profile_updated": "Profile successfully updated!",
   "all_price_categories":"All price categories",
-  "above_40000":"Above 40 000 Ft"
+  "above_40000":"Above 40 000 Ft",
+  "opinion_send_btn":"Please log in to submit your review!"
 
 }
