--- a/lang/hu.json
+++ b/lang/hu.json
@@ -224,5 +224,6 @@
   "profile_updated": "Profil sikeresen frissítve!",
   "all_price_categories":"Összes árkategória",
   "above_40000":"40 000 Ft felett",
-  "opinion_send_btn":"A vélemény elküldéséhez kérjük, jelentkezzen be!"
+  "opinion_send_btn":"A vélemény elküldéséhez kérjük, jelentkezzen be!",
+  "year":"év"
 }
