--- a/lang/de.json
+++ b/lang/de.json
@@ -224,5 +224,6 @@
   "all_price_categories":"Alle Preiskategorien",
   "above_40000":"Über 40 000 Ft",
   "wash_address": "Makó, Schaumbad straße 6.",
-  "opinion_send_btn":"Bitte melden Sie sich an, um eine Bewertung abzugeben!"
+  "opinion_send_btn":"Bitte melden Sie sich an, um eine Bewertung abzugeben!",
+  "year":"Jahr"
 }
