--- a/lang/hu.json
+++ b/lang/hu.json
@@ -212,7 +212,7 @@
   "appointment_button_selected": "csomag kiválasztva",
   "make_an_appointment":"időpontfoglalás",
   "welcome_message_booking":"Üdvözöljük a Super Car Wash időpontfoglaló rendszerében!",
-  "booking_instructions":"kérjük, válassza ki a kívánt mosási csomagokat a 'Szolgáltatások' oldalon, majd töltse ki a többi adatot, és mentse el a foglalását. foglalása bekerül az Ön személyes profiljába.",
+  "booking_instructions":"kérjük, válassza ki a kívánt csomagokat a 'Szolgáltatások' oldalon, majd töltse ki a többi adatot, és mentse el a foglalását. foglalása bekerül az Ön személyes profiljába.",
   "please_select_service": "kérem válasszon csomagjaink közül a szolgáltatások oldalon!",
   "time":"idő",
   "email_notmacht":"a megadott e-mail címek nem egyeznek!",
@@ -229,5 +229,6 @@
   "missing_data_to_delete": "Hiányzó adatok a törléshez.",
   "unsuccess_delete":"Nem sikerült törölni.",
   "success_appointment_delete":"Sikeres időpont törlés.",
-  "are_you_sure_delete":"Biztosan törölni szeretnéd ezt a foglalást?"
+  "are_you_sure_delete":"Biztosan törölni szeretnéd ezt a foglalást?",
+  "booking_warning_to_time":"Az érvényes foglaláshoz minden kiválasztott szolgáltatáshoz ki kell választani egy időpontot!"
 }
