PHP nyelvi kulcsok hozzáadása

--- a/lang/de.json
+++ b/lang/de.json
@@ -229,5 +229,11 @@
   "missing_data_to_delete":"Fehlende Daten zum Löschen.",
   "unsuccess_delete": "Löschen nicht erfolgreich.",
   "success_appointment_delete": "Erfolgreiche Terminlöschung.",
-  "booking_warning_to_time": "Für eine gültige Buchung muss zu jeder ausgewählten Dienstleistung ein Zeitpunkt gewählt werden!"
+  "booking_warning_to_time": "Für eine gültige Buchung muss zu jeder ausgewählten Dienstleistung ein Zeitpunkt gewählt werden!",
+  "confirm_delete_booking": "Möchten Sie diese Buchung wirklich löschen?",
+  "booking_saved_successfully": "Buchung erfolgreich gespeichert!",
+  "please_login": "Bitte melden Sie sich an!"
+
+
+
 }
