--- a/lang/en.json
+++ b/lang/en.json
@@ -233,10 +233,6 @@
   "not_logged_in_alert": "You are not logged in. Please log in again!",
   "confirm_delete_booking": "Are you sure you want to delete this booking?",
   "booking_saved_successfully": "Booking saved successfully!",
-  "please_login": "Please log in!"
-
-
-
-
-
+  "please_login": "Please log in!",
+  "review_sent_successfully": "Review sent successfully!"
 }
