--- a/lang/de.json
+++ b/lang/de.json
@@ -229,9 +229,12 @@
   "missing_data_to_delete":"Fehlende Daten zum Löschen.",
   "unsuccess_delete": "Löschen nicht erfolgreich.",
   "success_appointment_delete": "Erfolgreiche Terminlöschung.",
+  "not_logged_in_alert": "Sie sind nicht angemeldet. Bitte melden Sie sich erneut an!",
   "booking_warning_to_time": "Für eine gültige Buchung muss zu jeder ausgewählten Dienstleistung ein Zeitpunkt gewählt werden!",
   "confirm_delete_booking": "Möchten Sie diese Buchung wirklich löschen?",
   "booking_saved_successfully": "Buchung erfolgreich gespeichert!",
   "please_login": "Bitte melden Sie sich an!",
-  "review_sent_successfully": "Bewertung erfolgreich gesendet!"
+  "review_sent_successfully": "Bewertung erfolgreich gesendet!",
+  "sunday_closed_alert": "Am Sonntag haben wir geschlossen! Bitte wählen Sie ein anderes Datum."
+
 }
