--- a/lang/hu.json
+++ b/lang/hu.json
@@ -231,9 +231,10 @@
   "success_appointment_delete":"Sikeres időpont törlés.",
   "are_you_sure_delete":"Biztosan törölni szeretnéd ezt a foglalást?",
   "booking_warning_to_time":"Az érvényes foglaláshoz minden kiválasztott szolgáltatáshoz ki kell választani egy időpontot!",
-  "not_logged_in_alert": "Nem vagy bejelentkezve. Jelentkezz be újra!",
+  "not_logged_in_alert": "Nincs bejelentkezve. Jelentkezzen be újra!",
   "confirm_delete_booking": "Biztosan törölni szeretnéd ezt a foglalást?",
   "booking_saved_successfully": "Foglalás sikeresen mentve!",
   "please_login": "Kérem, jelentkezzen be!",
-  "review_sent_successfully": "Vélemény sikeresen elküldve!"
+  "review_sent_successfully": "Vélemény sikeresen elküldve!",
+  "sunday_closed_alert": "Vasárnap zárva tartunk! Kérem, válasszon másik dátumot!"
 }
