Lang fájl módosítás

--- a/lang/en.json
+++ b/lang/en.json
@@ -2,7 +2,7 @@
   "user": "user",
   "users": "users",
   "language": "language",
-  "home_page": "home page",
+  "home_page": "home",
   "page": "page",
   "login": "login",
   "logout": "logout",
